Exibe dados do livro pesquisado